# XinputPlugin

./: .clang-format  CMakeLists.txt  README.md
include/: XInputBase.h
src/: XInputBase.cpp  main.cpp
